--- a/sass/components/_advantages.scss
+++ b/sass/components/_advantages.scss
@@ -40,7 +40,7 @@
   }
 }
 
-@media screen and (min-width: 768px) and(max-width:1599px) {
+@media screen and (min-width: 768px) and(max-width:1199px) {
   .advantages {
     max-width: 768px;
   }
@@ -58,7 +58,7 @@
   }
 }
 
-@media screen and (min-width: 1600px) {
+@media screen and (min-width: 1200px) {
   .advantages {
     margin-top: 64px;
     max-width: 1200px;
@@ -68,7 +68,7 @@
     display: flex;
 
     .item {
-      width: calc((100%-90px) / 4);
+      width: calc((100% - 90px) / 4);
       margin: 0;
     }
 
