--- a/sass/components/_our-team.scss
+++ b/sass/components/_our-team.scss
@@ -84,7 +84,7 @@
   }
 }
 
-@media screen and (min-width: 768px) and(max-width:1599px) {
+@media screen and (min-width: 768px) and(max-width:1199px) {
   .team-container {
     max-width: 768px;
   }
@@ -110,7 +110,7 @@
   }
 }
 
-@media screen and (min-width: 1600px) {
+@media screen and (min-width: 1200px) {
   .team-container {
     max-width: 1200px;
   }
@@ -127,7 +127,7 @@
   }
 
   .team-member {
-    width: calc((100%-90px) / 4);
+    width: calc((100% - 90px) / 4);
     padding-bottom: 35px;
     margin-right: 30px;
     background-color: #ffffff;
