--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -28,6 +28,8 @@ html {
 
 body {
   margin: 0;
+  margin-left: auto;
+  margin-right: auto;
   font-family: Roboto, sans-serif;
   font-weight: 400;
   font-size: 14px;
@@ -520,11 +522,14 @@ header {
 
 .wrapper img {
   max-width: 100%;
+  height: auto;
 }
 
 .project-item {
   margin-bottom: 30px;
   max-width: 450px;
+  width: 100%;
+  height: auto;
   border-width: 1px;
   border-style: solid;
   border-color: #eeeeee;
@@ -557,6 +562,7 @@ header {
   .project-item {
     margin-right: 30px;
     max-width: 370px;
+    width: 100%;
   }
   .project-item:nth-child(3n) {
     margin-right: 0;
@@ -614,6 +620,13 @@ header {
           transform: translateY(0);
 }
 
+@media screen and (max-width: 480px) {
+  .project-description {
+    padding: 15px;
+    font-size: 16px;
+  }
+}
+
 .footer {
   min-width: 480px;
   background: #2f303a;
@@ -634,7 +647,7 @@ header {
       -ms-flex-direction: column;
           flex-direction: column;
   width: 480px;
-  padding: 60px 15px;
+  padding: 60px 0;
   max-width: 480px;
   margin-left: auto;
   margin-right: auto;
@@ -642,7 +655,8 @@ header {
 
 .footer-email {
   display: block;
-  width: 450px;
+  max-width: 450px;
+  width: 100%;
   max-width: 100%;
   border: 1px solid rgba(255, 255, 255, 0.3);
   -webkit-box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
@@ -755,6 +769,7 @@ header {
 }
 
 .subscribe-form {
+  max-width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -766,6 +781,12 @@ header {
       -ms-flex-direction: column;
           flex-direction: column;
   margin-top: 20px;
+}
+
+@media screen and (min-width: 480px) and (max-width: 1199px) {
+  .subscribe-form {
+    width: 450px;
+  }
 }
 
 .submitt {
