--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -6,14 +6,15 @@
     @include display;
     flex-direction: column;
     width: 480px;
-    padding: 60px 15px;
+    padding: 60px 0;
     max-width: 480px;
     margin-left: auto;
     margin-right: auto;
   }
   &-email {
     display: block;
-    width: 450px;
+    max-width: 450px;
+    width: 100%;
     max-width: 100%;
     border: 1px solid rgba(255, 255, 255, 0.3);
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
@@ -98,10 +99,14 @@
   text-align: center;
 
   &-form {
+    max-width: 100%;
     display: flex;
     align-items: center;
     flex-direction: column;
     margin-top: 20px;
+    @media screen and (min-width: 480px) and (max-width: 1199px) {
+      width: 450px;
+    }
   }
 }
 
