--- a/sass/components/_projects.scss
+++ b/sass/components/_projects.scss
@@ -25,12 +25,15 @@
 
   img {
     max-width: 100%;
+    height: auto;
   }
 }
 
 .project-item {
   margin-bottom: 30px;
   max-width: 450px;
+  width: 100%;
+  height: auto;
   border-width: 1px;
   border-style: solid;
   border-color: $border-color;
@@ -59,6 +62,7 @@
   @media screen and (min-width: 1200px) {
     margin-right: 30px;
     max-width: 370px;
+    width: 100%;
 
     &:nth-child(3n) {
       margin-right: 0;
@@ -110,5 +114,9 @@
   .project-item > a:hover &,
   .project-item > a:focus & {
     transform: translateY(0);
+  }
+  @media screen and (max-width: 480px) {
+    padding: 15px;
+    font-size: 16px;
   }
 }
