--- a/css/main.css
+++ b/css/main.css
@@ -497,10 +497,8 @@ header {
 }
 
 .advantages {
-  margin: 60px;
+  margin: 60px auto;
   max-width: 480px;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .advantages p {
@@ -580,7 +578,6 @@ header {
 }
 
 .footer {
-  min-width: 480px;
   background: #2f303a;
 }
 
@@ -598,7 +595,6 @@ header {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  width: 480px;
   padding: 60px 0;
   max-width: 480px;
   margin-left: auto;
