--- a/sass/components/_advantages.scss
+++ b/sass/components/_advantages.scss
@@ -7,10 +7,9 @@
 }
 
 .advantages {
-  margin: 60px;
+  margin: 60px auto;
   max-width: 480px;
-  margin-left: auto;
-  margin-right: auto;
+
   p {
     margin-top: 10px;
     font-size: 14px;
