--- a/css/main.css
+++ b/css/main.css
@@ -596,7 +596,7 @@ header {
       -ms-flex-direction: column;
           flex-direction: column;
   padding: 60px 0;
-  max-width: 480px;
+  max-width: 100%;
   margin-left: auto;
   margin-right: auto;
 }
@@ -604,7 +604,6 @@ header {
 .footer-email {
   display: block;
   max-width: 450px;
-  width: 100%;
   max-width: 100%;
   border: 1px solid rgba(255, 255, 255, 0.3);
   -webkit-box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
@@ -1363,6 +1362,12 @@ header {
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+@media screen and (max-width: 479px) {
+  .form-input {
+    max-width: 100%;
+  }
+}
+
 .input-group:hover .form-input,
 .input-group:focus .form-input {
   border: 1px solid #2196f3;
@@ -1405,6 +1410,12 @@ header {
   padding: 12px 16px;
   -webkit-transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (max-width: 479px) {
+  .comment {
+    max-width: 100%;
+  }
 }
 
 .comment-container {
