--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -646,7 +646,7 @@ header {
       -ms-flex-direction: column;
           flex-direction: column;
   padding: 60px 0;
-  max-width: 480px;
+  max-width: 100%;
   margin-left: auto;
   margin-right: auto;
 }
@@ -654,7 +654,6 @@ header {
 .footer-email {
   display: block;
   max-width: 450px;
-  width: 100%;
   max-width: 100%;
   border: 1px solid rgba(255, 255, 255, 0.3);
   -webkit-box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
